<resources>
    <string name="app_name">Deal-it</string>

    <string name="LoginText">Login:</string>
    <string name="PasswordText">Password:</string>
    <string name="LoginEditText">etuxxxx</string>
    <string name="connectionButton">Connection</string>
    <string name="ErrorConnection">Login or password incorrect</string>
    <string name="ConnectionEtablished">Welcome </string>
    <string name="ErrorInternet">Error checking internet connection</string>
    <string name="ErrorImage">"Error image"</string>

    <string name="Error">Error</string>
    <string name="ErrorID">Error not a valid ID</string>
    <string name="ErrorGender">Error not a valid gender caracter</string>
    <string name="ErrorType">Error not a valid type of announcement</string>
    <string name="ErrorTitleLenght">Error, exceeding the allowed text length.</string>
    <string name="ErrorTitleEmpty">Error, empty title..</string>
    <string name="ErrorDescriptionLenght">Error, exceeding the allowed text length.</string>
    <string name="ErrorDescriptionEmpty">Error, empty description.</string>
    <string name="ErrorPhoneNumber">Error, incorrect phone number</string>
    <string name="ErrorEmail">Error, invalid email</string>
    <string name="ErrorDate">Error, start date must be before the end date</string>
    <string name="ErrorDateAnnouncement">Error the announcement s date is later than tomorow</string>

    <string name="id_profil">Id</string>
    <string name="name_profil">Name</string>
    <string name="firstname_profil">Firstname</string>
    <string name="adress_profil">Adress</string>
    <string name="nation_profil">Nationnality</string>
    <string name="email_profile">Email</string>
    <string name="sexe_profil">Sex</string>
    <string name="phone_number">Phone</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profil">Profile</string>
    <string name="title_activity_search">Search announcement</string>
    <string name="title_activity_add__announcement">Add announcement</string>
    <string name="title_activity_manager__announcement">Announcement manager</string>
    <string name="title_menu_profil">Profile</string>
    <string name="title_menu_search">Research</string>
    <string name="title_menu_addAnnouncement">Add</string>
    <string name="title_menu_manageAnnouncement">Manager</string>
    <string name="title_menu_edit">Edit</string>
    <string name="title_menu_delete">Remove</string>
    <string name="title_activity_connection">Connection</string>

    <string name="SearchCategory">Category:</string>
    <string name="SearchType">Type:</string>
    <string name="ActivateSearchDate">Search by date</string>
    <string name="SearchRadio1">All</string>
    <string name="SearchRadio2">Offer</string>
    <string name="SearchRadio3">Demand</string>
    <string name="SearchButtonText">Search</string>
    <string name="StartDateResearch">Select a start date</string>
    <string name="EndDateResearch">Select an end date</string>
    <string name="ErrorDateCompare">Error the end date must be more recent than the start date .</string>
    <string name="resultResearch">Search results</string>
    <string name="ListEmpty">Nothing to show</string>
    <string name="ParseError">Error not a number</string>

    <string name="spinnerText0">Select a category</string>
    <string name="spinnerText1">All</string>
    <string name="spinnerText2">School</string>
    <string name="spinnerText3">Electronics</string>
    <string name="spinnerText4">Housing</string>
    <string name="spinnerText5">Leisure</string>
    <string name="spinnerText6">Food</string>
    <string name="spinnerText7">Health</string>
    <string name="spinnerText8">Conveyance</string>

    <string name="Category0">Selectionnez une catégorie</string>
    <string name="Category1">Toutes</string>
    <string name="Category2">Ecole</string>
    <string name="Category3">Informatique</string>
    <string name="Category4">Logement</string>
    <string name="Category5">Loisir</string>
    <string name="Category6">Nourriture</string>
    <string name="Category7">Santé</string>
    <string name="Category8">Transport</string>
    <string name="Type1">Toutes</string>
    <string name="Type2">Offre</string>
    <string name="Type3">Demande</string>

    <string name="title_activity_search_activity_list_view">Search results</string>

    <string name="offer_announcement">Offer</string>
    <string name="request_announcement">Demand</string>
    <string name="title_announcement">Title</string>
    <string name="description_announcement">Description (500 words)</string>
    <string name="prize_announcement">Price: </string>
    <string name="euro"> €</string>
    <string name="button_announcement">Post</string>
    <string name="title_activity_search_activity_announcement">Announcement details</string>

    <string name="AddConsultationWellDone">Consultation added to your history</string>
    <string name="title_activity_user_announcement_list">Your announcement</string>
    <string name="title_activity_user_history_list">Your history</string>

    <string name="advertisngContextMenu">Maintains click on the desired item to show the context menu</string>
    <string name="textContextMenuShow">Consult</string>
    <string name="textContextMenuModify">Modify</string>
    <string name="textContextMenu">Delete</string>
    <string name="DeleteConfirmation">Your announcement has been deleted</string>

    <string name="interractWarning">To interract with the list, hold the click</string>
    <string name="actionDeleteAllHistory">Delete all history</string>
    <string name="DeleteConsultationConfirmation">Your consultation has been deleted</string>

    <string name="button_edition_announcement">Modify</string>
    <string name="ModifyAnnouncementWellDone">Modifications made successfully</string>
    <string name="title_activity_edit_announcement">Modify announcement</string>
    <string name="AddAnnouncementWellDone">Your announcement has been added</string>
    <string name="DeleteAnnouncementConfirmation">Announcement has been deleted</string>
    <string name="ErrorDescriptionLength">Description\'s length is not valid</string>
    <string name="ErrorUsingSquare">the use of # is not allowed</string>
    <string name="ErrorTitleLength">Title\'s length is not valid</string>

</resources>
